testsuite/tests/builtins/str_methods/starts_with/non_str_prefix/test.out
Error: Invalid argument type
   ╭─[ <working-dir>/script.lkql:1:7 ]
   │
 1 │ print("Hello World".starts_with(42))
   │       ──────────────┬──────────────  
   │                     ╰──────────────── Expecting a "Str" for the parameter "prefix", got a "Int"
───╯
